--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                             </div>
                         </div>
                     </div>
-                    <a href="login.html"><button class="btn btn-outline-danger">Login</button></a>
-                    <a href="signup.html"><button class="btn btn-outline-danger">Signup</button></a>
+                    <a href="/Ashishcoder/login.html"><button class="btn btn-outline-danger">Login</button></a>
+                    <a href="/Ashishcoder/signup.html"><button class="btn btn-outline-danger">Signup</button></a>
                 </div>
             </div>
         </div>
