--- a/home.html
+++ b/home.html
@@ -20,13 +20,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link active" aria-current="page" href="/Ashishcoder/home.html">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="/Ashishcoder/about.html">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="/Ashishcoder/contact.html">Contact us</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -49,8 +49,27 @@
                     <button class="btn btn-outline-danger" type="submit">Search</button>
                 </form>
                 <div class="mx-2">
-                    <a href="login.html"><button class="btn btn-outline-danger">Login</button></a>
-                    <button class="btn btn-outline-danger">Signup</button>
+                    <div class="modal" tabindex="-1">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Modal title</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Modal body text goes here.</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="/Ashishcoder/login.html"><button class="btn btn-outline-danger">Login</button></a>
+                    <a href="/Ashishcoder/signup.html"><button class="btn btn-outline-danger">Signup</button></a>
                 </div>
             </div>
         </div>
@@ -69,7 +88,7 @@
                 <img src="https://source.unsplash.com/1600x700/?web" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Welcome</h5>
-                    <p>This is my first site and we can make it also.</p>
+                    <p>Welcome to my site.</p>
                     <button class="btn btn-primary">Technology</button>
                     <button class="btn btn-danger">Web development</button>
                     <button class="btn btn-success">Tech Fun</button>
@@ -113,11 +132,11 @@
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-primary">World</strong>
-                        <h3 class="mb-0">Codeing example</h3>
-                        <div class="mb-1 text-muted">Nov 12</div>
-                        <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
-                            lead-in to additional content.</p>
+                        <strong class="d-inline-block mb-2 text-dark">C,C++</strong>
+                        <h3 class="mb-0"> C,C++ Codeing example</h3>
+                        <div class="mb-1 text-muted">Cording Languages</div>
+                        <p class="card-text mb-auto">C and C++ is very important it can help us to solve the normal
+                            basic thing and OOPs conspts and van made over work easy. </p>
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
@@ -133,9 +152,8 @@
                     <div class="col p-4 d-flex flex-column position-static">
                         <strong class="d-inline-block mb-2 text-success">Design</strong>
                         <h3 class="mb-0">Design of Codes</h3>
-                        <div class="mb-1 text-muted">Nov 11</div>
-                        <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                            additional content.</p>
+                        <div class="mb-1 text-muted">Codes</div>
+                        <p class="mb-auto">See how can we Design a code in web sites and its looking amazing.</p>
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
@@ -152,11 +170,11 @@
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-primary">World</strong>
-                        <h3 class="mb-0">Python</h3>
-                        <div class="mb-1 text-muted">Nov 12</div>
-                        <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
-                            lead-in to additional content.</p>
+                        <strong class="d-inline-block mb-2 text-primary">Python</strong>
+                        <h3 class="mb-0">Python Codeing</h3>
+                        <div class="mb-1 text-muted">About Python language</div>
+                        <p class="card-text mb-auto">In python we can learn about numbpy , Pandas,Matplotlib and much
+                            more things.</p>
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
@@ -170,11 +188,11 @@
                 <div
                     class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-success">Design</strong>
-                        <h3 class="mb-0">Java</h3>
-                        <div class="mb-1 text-muted">Nov 11</div>
-                        <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                            additional content.</p>
+                        <strong class="d-inline-block mb-2 text-success">Java</strong>
+                        <h3 class="mb-0">Java Language</h3>
+                        <div class="mb-1 text-muted">About Java language</div>
+                        <p class="mb-auto">Some basic knowlage of java that can help us to solve a problem of DS an
+                            other basic things.</p>
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
